Don't flip Metal layers upside-down, only GL ones.

--- a/surfman/Cargo.toml
+++ b/surfman/Cargo.toml
@@ -65,6 +65,7 @@ core-graphics = "0.17"
 display-link = "0.2"
 io-surface = "0.12"
 mach = "0.3"
+metal = "0.17"
 objc = "0.2"
 
 [target.'cfg(all(unix, not(any(target_os = "macos", target_os = "android"))))'.dependencies.wayland-sys]
